#247 fixed faq section mobile header

--- a/packages/web/src/components/spa/HackAUBG/FaqSection/faq_section.css
+++ b/packages/web/src/components/spa/HackAUBG/FaqSection/faq_section.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 2% 0;
+    padding: 4% 0;
     font-family: 'Roboto';
 }
 
@@ -16,6 +16,7 @@
     font-weight: 900;
     font-size: 2em;
     align-items: center;
+    text-align: center;
 }
 
 .faq-text-container {
@@ -24,7 +25,7 @@
 }
 
 .faq-header {
-    width: 80%;
+    width: 60%;
     font-size: 1.2rem;
     color: #19b700;
     font-weight: bold;
@@ -46,9 +47,9 @@
     }
 
     .faq {
-        margin-bottom: 2.5rem;
-        align-items: center;
-        justify-content: center;
+        margin-bottom: 3%;
+        margin-top: 4%;
+        width: 70%;
     }
 
     .faq-header {
